[package]
name = "mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bincode = { version = "2.0.1", features = ["derive"] }
clap = { version = "4.5.47", features = ["derive"] }
glam = { version = "0.30.6", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
toml = "0.9.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
