[package]
name = "mirror"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-channel = "2.5.0"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
chrono = "0.4.42"
clap = { version = "4.5.47", features = ["derive"] }
eframe = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default", "image"] }
futures = "0.3.31"
glam = { version = "0.30.6", features = ["serde"] }
image = "0.25.8"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
toml = "0.9.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
