[package]
name = "mirror"
version = "0.1.0"
edition = "2024"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-channel = "2.5.0"
clap = { version = "4.5.47", features = ["derive"] }
image = "0.25.8"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
toml = "0.9.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.81"
wasm-bindgen-futures = "0.4.54"
log = "0.4.28"
tokio = { version = "1.47.1", features = ["rt", "io-util", "macros", "sync"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2.105"
getrandom = { version = "0.3.4", features = ["wasm_js"] }

[dependencies]
anyhow = "1.0.99"
thiserror = "2.0.16"
eframe = "0.32.3"
egui_extras = { version = "0.32.3", features = ["default", "image"] }
chrono = "0.4.42"
bincode = { version = "2.0.1", features = ["derive", "serde"] }
glam = { version = "0.30.6", features = ["serde"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
futures = "0.3.31"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
tracing = "0.1.41"
